--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Armando Castillo <armandowg@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "grunt": ">=1.3.0",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-war": "^0.5.1"
